--- a/config.json
+++ b/config.json
@@ -1,4 +1,11 @@
 {
+	"templates": {
+		"tags1": { "display_name": "tags template", "path": "tags.tpl" },
+		"users1": { "display_name": "users template", "path": "users.tpl" },
+		"polaroid": { "display_name": "polaroid template", "path": "photos.tpl"},
+		"photo_hover": { "display_name": "photo hover template", "path": "photo_hover.tpl" }, 
+		"location": { "display_name": "location template", "path": "image-locations.tpl" }
+	},
     "pages": [
     	{
         	"template_path": "login.tpl",
@@ -49,10 +56,7 @@
 			"query_params": {
 				"count": 20
 			},
-			"templates": [{
-				"name": "tags template",
-				"path": "tags.tpl"
-			}],
+			"templates": ["tags1"],
 			"extras": {
 				"reference_url": "https://instagram.com/developer/endpoints/tags/#get_tags_search",
 				"help_text": "Go to the Instagram API reference for more information."
@@ -69,10 +73,7 @@
 			"query_params": {
 				"count": 20
 			},
-			"templates": [{
-				"name": "users template",
-				"path": "users.tpl"
-			}],
+			"templates": ["users1"],
 			"extras": {
 				"reference_url": "https://instagram.com/developer/endpoints/users/#get_users_search",
 				"help_text": "Go to the Instagram API reference for more information."
@@ -90,18 +91,7 @@
 			"query_params": {
 				"count": 20
 			},
-			"templates": [
-				{
-					"name": "polaroid template",
-					"path": "photos.tpl"
-				},{
-					"name": "photo hover template",
-					"path": "photo_hover.tpl"
-				}, {
-					"name": "location template",
-					"path": "image-locations.tpl"
-				}
-			],
+			"templates": ["polaroid", "photo_hover", "location"],
 			"extras": {
 				"reference_url": "https://instagram.com/developer/endpoints/tags/#get_tags_media_recent",
 				"help_text": "Go to the Instagram API reference for more information."
@@ -119,17 +109,7 @@
 			"query_params": {
 				"count": 20
 			},
-			"templates": [{
-					"name": "polaroid template",
-					"path": "photos.tpl"
-				}, {
-					"name": "photo hover template",
-					"path": "photo_hover.tpl"
-				}, {
-					"name": "location template",
-					"path": "image-locations.tpl"
-				}
-			],
+			"templates": ["polaroid", "photo_hover", "location"],
 			"extras": {
 				"reference_url": "https://instagram.com/developer/endpoints/users/#get_users_media_recent",
 				"help_text": "Go to the Instagram API reference for more information."
@@ -147,17 +127,25 @@
 			"query_params": {
 				"count": 20
 			},
-			"templates": [{
-					"name": "polaroid template",
-					"path": "photos.tpl"
-				}, {
-					"name": "photo hover template",
-					"path": "photo_hover.tpl"
-				}, {
-					"name": "location template",
-					"path": "image-locations.tpl"
-				}
-			],
+			"templates": ["polaroid", "photo_hover", "location"],
+			"extras": {
+				"reference_url": "https://instagram.com/developer/endpoints/users/#get_users_feed_liked",
+				"help_text": "Go to the Instagram API reference for more information."
+			},
+            "target": "#main"
+        },
+    	{
+        	"url": "your-feed",
+        	"name": "Your Feed",
+        	"data_type": "jsonp",
+        	"type": "api",
+        	"next_url": "pagination.next_url",
+        	"data_attribute": "data",
+			"api_url": "https://api.instagram.com/v1/users/self/feed",
+			"query_params": {
+				"count": 20
+			},
+			"templates": ["polaroid", "photo_hover", "location"],
 			"extras": {
 				"reference_url": "https://instagram.com/developer/endpoints/users/#get_users_feed_liked",
 				"help_text": "Go to the Instagram API reference for more information."
